adds xgboost section wip, notes on pandoc citekey syntax
Former-commit-id: 98e20a67c6b2b8510ea654561eb46af3b8f1e9f3
Former-commit-id: af52d74b97aa8dacc8c1139ac0e203c9c6dbf127

--- a/src/wine_analysis_hplc_uv/notebooks/xgboost_modeling.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/xgboost_modeling.ipynb
@@ -17,6 +17,9 @@
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
     "import xgboost as xgb\n",
     "\n",
     "import pandas as pd\n",
@@ -46,150 +49,101 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# reduce dataset to aligned signals/ref with samplecode labels and transpose\n",
+    "def classify_sample(data):\n",
     "\n",
-    "d = (\n",
-    "    data.loc[:, idx[:, :, [\"aligned\", \"ref\"]]]\n",
-    "    .droplevel([\"wine\", \"state\"], axis=1)\n",
-    "    .reset_index(drop=True)\n",
-    "    .T\n",
-    ")\n",
-    "display(d)"
+    "    # reduce dataset to aligned signals/ref with samplecode labels and transpose\n",
+    "\n",
+    "    d = (\n",
+    "        data.loc[:, idx[:, :, [\"aligned\", \"ref\"]]]\n",
+    "        .droplevel([\"wine\", \"state\"], axis=1)\n",
+    "        .reset_index(drop=True)\n",
+    "        .T\n",
+    "    )\n",
+    "    \n",
+    "    # replace alphabetic samplecode values with float codes\n",
+    "\n",
+    "    alpha_samplecodes = [\n",
+    "        \"crawford-cab\",\n",
+    "        \"mt-diff-bannockburn-pn\",\n",
+    "        \"st hugo gsm\",\n",
+    "        \"stoney-rise-pn\",\n",
+    "        \"torbreck-struie\",\n",
+    "    ]\n",
+    "\n",
+    "    float_codes = [\n",
+    "        1111,\n",
+    "        2222,\n",
+    "        3333,\n",
+    "        4444,\n",
+    "        5555,\n",
+    "    ]\n",
+    "\n",
+    "    code_dict =  dict(zip(alpha_samplecodes, float_codes))\n",
+    "    display(code_dict)\n",
+    "\n",
+    "    d.index = d.index.to_series().replace(code_dict).astype(int)\n",
+    "    \n",
+    "    y = d.index.values\n",
+    "    X = d.values\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    sklearn.model_selection.train_test_split(*arrays, test_size=none, train_size=none, random_state=none, shuffle=true, stratify=none)\n",
+    "\n",
+    "    train_test_split wraps `next(shufflesplit().split(x, y))` to produce validated, randomized and proportioned training and test sets from an input.\n",
+    "\n",
+    "    `arrays`: sequence of indexables with same length/`shape[0]`, i.e. rows. can accept lists, np.arrays, scipy sparse matrices, pd.dataframes.\n",
+    "\n",
+    "    `test_size`: `float` or `int`, default=`none`. size of test set. integer input translates as absolute number of samples in the test set, float between 0 and 1 translates as a proportion. if set to `none`, test_size will be the remainder of the samples after proessing `train_size`. if `train_size` also `none`, defaults to 0.25.\n",
+    "\n",
+    "    `training_size`: `float` or `int`, default=`none`. size of training set. integer input translates as absolute number of samples in the training set, float between 0 and 1 translates as a proportion. if set to `none`, test_size will be the remainder of the samples after proessing `test_size`. if `test_size` also `none`, will default to 0.75.\n",
+    "\n",
+    "    `random_state`: `int`, `randomstate instance`, `none`, default=`none`. seed for the randomized shuffling. providing a value will enable reproducible results.\n",
+    "\n",
+    "    shuffle: `bool`, default=none. (?) `none` results in a stratified split. stratified folds result in sets with the same proportionate representation per fold across classes in the data.\n",
+    "\n",
+    "    stratify: `array-like`, default=None: stratify split with the `array-like` as the class labels.\n",
+    "\n",
+    "    returns a list of length 2*len(arrays)\n",
+    "\n",
+    "    source: [sklearn](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.train_test_split.html)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    x_train, x_test, y_train, y_test = train_test_split(X, y)\n",
+    "    \n",
+    "    le = LabelEncoder()\n",
+    "\n",
+    "    y_test = le.fit_transform(y_test)\n",
+    "    y_train = le.fit_transform(y_train)\n",
+    "\n",
+    "    display(y_train,y_test)\n",
+    "    \n",
+    "    \n",
+    "    \"\"\"\n",
+    "    XGBoost adaption of sklearn API.\n",
+    "    \n",
+    "    Docs: [link](https://xgboost.readthedocs.io/en/stable/python/python_api.html#module-xgboost.sklearn)\n",
+    "    User guide: [link](https://xgboost.readthedocs.io/en/stable/python/sklearn_estimator.html)\n",
+    "    \n",
+    "    Parameters:\n",
+    "    `n_estimators: `int`. number of boosting rounds. \n",
+    "    \"\"\" \n",
+    "    clf = xgb.XGBClassifier(tree_method=\"hist\")\n",
+    "\n",
+    "    # Fit the model, test sets are used for early stopping.\n",
+    "    \"\"\"\n",
+    "    `eval_set` is used internally to calculate validation metrics\n",
+    "    X: Feature matrix\n",
+    "    \"\"\"\n",
+    "    clf.fit(X_train, y_train, eval_set=[(X_test, y_test)], verbose=False)\n",
+    "    display(help(clf.fit))\n",
+    "    y_pred = clf.predict(X_test)\n",
+    "    \n",
+    "    print('XGBoost model accuracy score: {0:0.4f}'. format(accuracy_score(y_test, y_pred)))\n",
+    "    \n",
+    "    return \n",
+    "    \n",
+    "classify_sample(data)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# replace alphabetic samplecode values with float codes\n",
-    "\n",
-    "alpha_samplecodes = [\n",
-    "    \"crawford-cab\",\n",
-    "    \"mt-diff-bannockburn-pn\",\n",
-    "    \"st hugo gsm\",\n",
-    "    \"stoney-rise-pn\",\n",
-    "    \"torbreck-struie\",\n",
-    "]\n",
-    "\n",
-    "float_codes = [\n",
-    "    1111,\n",
-    "    2222,\n",
-    "    3333,\n",
-    "    4444,\n",
-    "    5555,\n",
-    "]\n",
-    "\n",
-    "code_dict =  dict(zip(alpha_samplecodes, float_codes))\n",
-    "display(code_dict)\n",
-    "\n",
-    "d.index = d.index.to_series().replace(code_dict).astype(int)\n",
-    "d.index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = d.index.values\n",
-    "X = d.values\n",
-    "y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "sklearn.model_selection.train_test_split(*arrays, test_size=None, train_size=None, random_state=None, shuffle=True, stratify=None)\n",
-    "\n",
-    "train_test_split wraps `next(ShuffleSplit().split(X, y))` to produce validated, randomized and proportioned training and test sets from an input.\n",
-    "\n",
-    "`arrays`: sequence of indexables with same length/`shape[0]`, i.e. rows. Can accept lists, np.arrays, scipy sparse matrices, pd.DataFrames.\n",
-    "\n",
-    "`test_size`: `float` or `int`, default=`None`. Size of test set. Integer input translates as absolute number of samples in the test set, float between 0 and 1 translates as a proportion. If set to `None`, test_size will be the remainder of the samples after proessing `train_size`. If `train_size` also `None`, defaults to 0.25.\n",
-    "\n",
-    "`training_size`: `float` or `int`, default=`None`. Size of training set. Integer input translates as absolute number of samples in the training set, float between 0 and 1 translates as a proportion. If set to `None`, test_size will be the remainder of the samples after proessing `test_size`. If `test_size` also `None`, will default to 0.75.\n",
-    "\n",
-    "`random_state`: `int`, `RandomState instance`, `None`, default=`None`. Seed for the randomized shuffling. Providing a value will enable reproducible results.\n",
-    "\n",
-    "shuffle: `bool`, default=None. (?) `None` results in a stratified split. Stratified folds result in sets with the same proportionate representation per fold across classes in the data.\n",
-    "\n",
-    "Returns a list of length 2*len(arrays)\n",
-    "\n",
-    "Source: [sklearn](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.train_test_split.html)\n",
-    "\"\"\"\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "le = LabelEncoder()\n",
-    "y_train = le.fit_transform(y_train)\n",
-    "y_train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "le = LabelEncoder()\n",
-    "y_test = le.fit_transform(y_test)\n",
-    "y_test\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Use \"hist\" for constructing the trees, with early stopping enabled.\n",
-    "clf = xgb.XGBClassifier(tree_method=\"hist\")\n",
-    "# Fit the model, test sets are used for early stopping.\n",
-    "clf.fit(X_train, y_train, eval_set=[(X_test, y_test)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import accuracy_score\n",
-    "\n",
-    "y_pred = clf.predict(X_test)\n",
-    "\n",
-    "print('XGBoost model accuracy score: {0:0.4f}'. format(accuracy_score(y_test, y_pred)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
