existant logbooks have been combined into a monolithic file found at ../mres_logbook.qmd, as well as associated files. A top level thesis file has been initialized.
Former-commit-id: bc9e887db71ac12c68e9127b1b3c851413d5267a
Former-commit-id: 55066bca11fc6fda13171be42650747015e89beb

--- a/src/wine_analysis_hplc_uv/notebooks/chapter-classification_modeling.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/chapter-classification_modeling.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "## Decision Trees\n",
     "\n",
-    "According to @loh_2014 [pp. 330], What we would now recognize as a decision tree was first published by @morgan_1963 for regression, and classification nine years later by @messenger_1972.\n",
+    "According to @loh_2014 [pp. 330], What we would now recognize as a decision tree was first published by @morgan_1963 for regression, and classification nine years later by @messenger_1972. Decision Trees function by dividing the input dataset into branches which themselves are branched until an endpoint leaf is reached, at which point a prediction is produced [@wade_2020 pp. 65].\n",
     "\n",
     "An advantage of decision trees over other models is it is not necessary to scale or center input data [@géron_2019, pp. 177].\n",
     "\n",
@@ -38,7 +38,7 @@
     "\n",
     "Ensemble Methods function by aggregating the predictions of multiple individual base estimators to improve robustness by taking advantage of a concept termed *wisdom ofthe crowd* [@géron_2019, chap. 7, pp. 189], where while any one model may fail to adequately solve the problem, combining the strengths and flaws of distinct models hopefully produces a better performing model than any one alone. This was first exhibited during the 2006 Netflix Prize in which a $1 million USD prize was claimed by a super-group formed from individual competitor groups who ensembled their models together to win the competition [@kunapuli_2023, pp. 17, pt. 1]\n",
     "\n",
-    "Decision Tree ensembles consist of a specialized class of decision tree trained with the Classification And Regression Tree (CART) algorithm. CART functions try to split the training set into the two 'purest' subsets based on combinations of a feature $k$ and threshold value $t_k$, where the subsets are weighted by their size. Once split, this process is applied to each subset, and then those subsets, and so on until a depth defined by the hyperparameter `max_depth` is reached. It is a greedy algorithm in that it when splitting at the current depth, it does not include information how the current split will affect the purity of future splits, as finding the perfect tree is an *NP-Complete* problem [@géron_2019, pp. 179 - 180].\n",
+    "Decision Tree ensembles consist of a specialized class of decision tree trained with the Classification And Regression Tree (CART) algorithm. CART produces binary trees  by splitting the training set into the two 'purest' subsets based on combinations of a feature $k$ and threshold value $t_k$, where the subsets are weighted by their size. Once split, this process is applied to each subset, and then those subsets, and so on until a depth defined by the hyperparameter `max_depth` is reached. It is a greedy algorithm in that it when splitting at the current depth, it does not include information how the current split will affect the purity of future splits, as finding the perfect tree is an *NP-Complete* problem [@géron_2019, pp. 177 - 180].\n",
     "\n",
     "[@olson_2018] found that tree-based ensemble methods such as XGBoost significantly outperformed other models in solving bioinformatics classification problems.\n",
     " \n",
