adds contents of notes to notebooks, stray notebooks, start combining stray thesis files together
Former-commit-id: 0d2ace4505bf845754ac4917a19c98a7d9decadf
Former-commit-id: 044e627fe0d32314665f25605f91bb31a3cb4d1b

--- a/src/wine_analysis_hplc_uv/notebooks/chapter_signal_preprocessing.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/chapter_signal_preprocessing.ipynb
@@ -140,6 +140,15 @@
    "source": [
     "## Multiple Signal Alignment via DTW\n",
     "\n",
+    "### Literature Review\n",
+    "\n",
+    "| a | Cite Key                                                  | About                       |\n",
+    "|---|-----------------------------------------------------------|-----------------------------|\n",
+    "| 1 | [@cuadros-rodríguez_2021](./@cuadros-rodríguez_2021.md)   | GC-MS fingerprint alignment |\n",
+    "| 2 | [@cuadros-rodríguez_2021a](./@cuadros-rodríguez_2021a.md) | LC-UV fingerprint alignment |\n",
+    "| 3 | [@smith_2015](./@smith_2015.md)                           |                             |\n",
+    "| 4 | [@brown_2020c](./@brown_2020c.md)                         |                             |\n",
+    "\n",
     "2023-09-07 14:56:11\n",
     "\n",
     "The holy grail of this project is to apply [Dynamic Time Warping]() to a chromatographic dataset in order to align all peaks sample-by-sample. Efforts began in late April 2023 but faltered because the pipeline became unmaintainable. Five months later we're finally at a stage where we can begin again.\n",
