moved newly combined logbook file to notebooks level
Former-commit-id: 1d0f6bd20719f5aa51c2191298e948f63b50a5e0
Former-commit-id: 50f07ff4ff6e4383e4fa65f73bbf8a1cd605b3e8

--- a/src/wine_analysis_hplc_uv/notebooks/thesis.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/thesis.ipynb
@@ -15,39 +15,11 @@
     "\n",
     "<!-- remove before publication -->\n",
     "\n",
-    "[logbook](/Users/jonathan/mres_thesis/notes/mres_logbook.md)\n",
-    "\n",
-    "[logbook](/Users/jonathan/mres_thesis/wine_analysis_hplc_uv/logbook.md)\n",
-    "\n",
-    "[logbook guide](./logbook_guide.qmd)\n",
+    "[logbook](./mres_logbook.qmd)\n",
     "\n",
     "### Subprojects\n",
     "\n",
-    "[cuprac](./notes/project.hplc.cuprac.md)\n",
-    "\n",
-    "## Logbook final format\n",
-    "\n",
-    "The logbook files need to be standardized then archived, any further use of them will be through references rather than direct editing. Specifically:\n",
-    "\n",
-    "```markdown\n",
-    "# Title\n",
-    "\n",
-    "## Date\n",
-    "\n",
-    "### Contents\n",
-    "```\n",
-    "For both:\n",
-    "\n",
-    "[logbook](/Users/jonathan/mres_thesis/notes/mres_logbook.md)\n",
-    "\n",
-    "and\n",
-    "\n",
-    "[logbook](/Users/jonathan/mres_thesis/wine_analysis_hplc_uv/logbook.md)\n",
-    "\n",
-    "Do the following:\n",
-    "- [x] reinsert extracted content if less than 1 page / 1 date.\n",
-    "- [x] add brief description to each link\n",
-    "- [x] check structuring of title heiarchy as per format above."
+    "[cuprac](./notes/project.hplc.cuprac.md)\n"
    ]
   },
   {
