add signal alignment to prepro chap
Former-commit-id: 10c6d5498ba2ecc853bbf5a7037fb0c65c664fb9
Former-commit-id: 198fb33e903d74c37ccf64833934ef031e4fe955

--- a/src/wine_analysis_hplc_uv/notebooks/chapter_signal_preprocessing.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/chapter_signal_preprocessing.ipynb
@@ -172,6 +172,15 @@
     "\n",
     "It is well-known that the first and second derivatives of a chromatographic signal can be used for peak detection. [This notebook](./src/wine_analysis_hplc_uv/notebooks/derivatives_of_chromatograms.ipynb) is intended to investigate their behavior and see whether they can be useful in dashboard level signal visualisation.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Signal Alignment\n",
+    "\n",
+    "An exploration of Dynamic Time Warping for signal alignment can be found in [dynamic_time_warping](./dynamic_time_warping.ipynb) where a sample set of 4 shiraz under CUPRAC detection were aligned using a Sakoe-Chiba band with window size of 10. It was found that subtracting the baseline prior to alignment resulted in a better alignment. Goodness of alignment and any side-effects were judged by visual comparison between the original and aligned signals."
+   ]
   }
  ],
  "metadata": {
