--- a/src/wine_analysis_hplc_uv/notebooks/dynamic_time_warping.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/dynamic_time_warping.ipynb
@@ -16,6 +16,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "back: [Chapter: signal processing](./chapter_signal_preprocessing.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Retention Time Alignment\n",
     "\n",
     "Due to systemic error, datasets of chromatogams of samples run under the same experimental conditions often will exhibit retention time shifting for the same compound peak. Inter-sample data analysis requires that features are aligned within the same vector. The magnitude and direction of run on run peak shift is unique for each peak for each run, within a distribution, creating a complex problem. A traditional approach is to reduce the dimensionality of the chromatograms through an aggregate measure such as peak area, discarding the time axis in favor of an element-wise ordering. This approach has two downsides - the first is the manual marking, grouping and ordering of peaks across the sampleset, which is subjective and often irreproducible [@zheng_2017], the second is the arbitrary loss of information fed to the statistical model, specifically the signal shapes [@nielsen_1998]. @bos-RecentApplicationsChemometrics-2020 lists correlation-optimized warping (COW), dynamic time warping (DTW), and correlation-optimized shifting (COSHIFT) as the most popular methods of alignment.\n",
@@ -109,13 +116,10 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from pybaselines import Baseline\n",
     "from dtwalign import dtw\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "from wine_analysis_hplc_uv import definitions\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
     "from wine_analysis_hplc_uv.notebooks.dtw_methods import DTWNotebookMethods\n",
     "from wine_analysis_hplc_uv.signal_processing.mindex_signal_processing import (\n",
     "    SignalProcessor,\n",
