fixed typo, commented out the parquet file output lines
Former-commit-id: e2b49fdf3ade9c655da93e43ae1fd81805968169
Former-commit-id: 2d19251fdac251b2f80222c847560292341ee65b

--- a/src/wine_analysis_hplc_uv/notebooks/creating_downsampled_testset.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/creating_downsampled_testset.ipynb
@@ -22,7 +22,7 @@
     "from wine_analysis_hplc_uv.signal_processing.mindex_signal_processing import SignalProcessor\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "sigpro = SignalProcessor()\n",
+    "scipro = SignalProcessor()\n",
     "df = pd.read_parquet(definitions.RAW_PARQ_PATH)\n",
     "df"
    ]
@@ -49,7 +49,7 @@
    "source": [
     "df = \\\n",
     "(\n",
-    "    df.pipe(sigpro.standardize_time)\n",
+    "    df.pipe(scipro.standardize_time)\n",
     "    .resample(\"2S\")\n",
     "    .interpolate()\n",
     ")\n",
@@ -92,40 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "Form label dataframe from multiindex, form label column as concat of wine + cumcount+1.\n",
-    "Join with label column on samplecode index, use label column to map to wine, fill it\n",
-    "where NA with wine value (i.e. unique wine names) then replace wine column with label\n",
-    "through assign.\n",
-    "\"\"\"\n",
-    "# add the label as a concatentation of cumcount+1 and wine name\n",
-    "labels = (df\n",
-    ".columns\n",
-    ".to_frame()\n",
-    ".reset_index(drop=True)\n",
-    "[['samplecode','wine']]\n",
-    ".set_index('samplecode')\n",
-    "[lambda df: df.duplicated(keep=False)]\n",
-    ".assign(label=lambda df: df['wine'] + \" \" + df.groupby(['wine']).cumcount().add(1).astype(str))\n",
-    ")\n",
-    "\n",
-    "# go to long format, join with label df on samplecode, merge label and wine column via\n",
-    "# where, replace wine column with the merge, go back to tidy format\n",
-    "df = (df\n",
-    " .stack(['samplecode','wine'])\n",
-    " .reset_index('mins')\n",
-    " .join(labels['label'])\n",
-    " .rename_axis('vars',axis=1)\n",
-    " .reset_index()\n",
-    " .pipe(lambda df:\n",
-    "     df.assign(wine=df['label'].where(~df['label'].isna(),df['wine']))\n",
-    "     )\n",
-    " .drop(['label'],axis=1)\n",
-    " .set_index(['samplecode','wine','mins'])\n",
-    " .unstack(['samplecode','wine'])\n",
-    " .reorder_levels(axis=1, order=['samplecode','wine','vars'])\n",
-    " .sort_index(axis=1, level='samplecode')\n",
-    ")\n",
+    "df = scipro.unique_wine_label(df)\n",
     "df"
    ]
   },
@@ -175,10 +142,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from wine_analysis_hplc_uv import definitions\n",
-    "df.to_parquet(\n",
-    "    definitions.XPRO_DOWNSAMPLED_PARQ_PATH\n",
-    ")"
+    "# from wine_analysis_hplc_uv import definitions\n",
+    "# df.to_parquet(\n",
+    "#     definitions.XPRO_DOWNSAMPLED_PARQ_PATH\n",
+    "# )"
    ]
   },
   {
@@ -187,10 +154,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = pd.read_parquet(\n",
-    "    definitions.XPRO_DOWNSAMPLED_PARQ_PATH\n",
-    ")\n",
-    "a"
+    "# a = pd.read_parquet(\n",
+    "#     definitions.XPRO_DOWNSAMPLED_PARQ_PATH\n",
+    "# )\n",
+    "# a"
    ]
   }
  ],
