--- a/src/wine_analysis_hplc_uv/notebooks/pandas_multiindex_cheatsheet.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/pandas_multiindex_cheatsheet.ipynb
@@ -38,6 +38,91 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Rename a Multiindex Column Level"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The below example renames a multiindexed column level at level 0 through method chaining. The same result can be achieved for renaming a multiindexed index if the axis parameter is changed. The level is specifed by the level parameter, but can also be specified as a string corresponding to an existing name, if there is one."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rename a multiindex level\n",
+    "\n",
+    "df = (df\n",
+    "      .pipe(lambda df: df.set_axis(df.columns.rename(level=0, names = 'signal'),axis=1))\n",
+    "      )\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reorder Levels"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Generally after pivoting and unstacking, A multiindexed column will not be in the desired order. In this case, i wish for 'second' to be the top level category, with 'signal' as the secondary. To achieve this, use '.reorder_levels': "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = (\n",
+    "    df\n",
+    "    .reorder_levels(axis=1, order=['second','signal'])  \n",
+    "      )\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sort Multiindexed DataFrame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After transformations, the dataframe tends to be unsorted. For visualization and futher computation, it is best to sort the columns and rows by the top level category. In this example, we want to sort 'second' so all of the columns labelled 'one' are together, and so on:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "df = (\n",
+    "  df\n",
+    "  .sort_index(axis=1)\n",
+    ")\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
